# amazfit-notes

./: .gitignore  LICENSE  README.md
api/: .env.example  pyproject.toml
api/infra/: amazfit-notes-api.nginx  amazfit-notes-api.service
api/src/: config.py  dependencies.py  main.py
api/src/api/v1/: folders.py  health.py  notes.py  router.py  webhook.py
api/src/schemas/: block.py  folder.py  note.py
api/src/services/: markdown_parser.py  vault_reader.py
api/tests/: conftest.py  test_api.py  test_markdown_parser.py
docs/: README.md  api.md  architecture.md  infrastructure.md  markdown-parser.md  offline-cache.md  watch-app.md
watch/: app.js  app.json  config.example.js  package.json
watch/app-side/: index.js
watch/lib/: communication.js  fetch-with-cache.js  session.js
watch/page/folders/: index.js
watch/page/home/: index.js
watch/page/note-view/: index.js
watch/page/notes/: index.js
watch/page/shared/: colors.js  layout.js  list-builder.js  markdown-renderer.js  ui-helpers.js
